4-Network-Policies/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-mysql
spec:
  podSelector:
    matchLabels:
      app: my-release-mysql
  ingress: []
