4-Network-Policies/policy-allow-ubuntu.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-mysql
spec:
  podSelector:
    matchLabels:
      app: my-release-mysql
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: ubuntu
