4-Network-Policies/policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-mysql
spec:
  podSelector:
    matchLabels:
      app: mysql
  ingress:
  - from:
#    - ipBlock:
#        cidr: 172.17.0.0/16
#        except:
#        - 172.17.1.0/24
    - podSelector:
        matchLabels:
          run: ubuntu
